[main] добавлено хранение расширенной метаинформации о книгах на сервере
